# deep-dives-hub

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  deploy.yml
deep_dives_mcp/: README.md  server.py
docs/: api-docs.md  index.md  llms.txt  table.md
docs/.templates/: BOT-PROMPT.md  TEMPLATE-api.json  TEMPLATE-deep-dive.md  TEMPLATE-gist-and-table.md
docs/api/: 000660.json  AAOI.json  ADBE.json  ADPT.json  AEHR.json  AEM.json  AG.json  AMD.json  ASPI.json  ASTS.json  AVGO.json  BB.json  BE.json  BFLY.json  BLZE.json  BMNR.json  CBRS.json  CCXI.json  CEG.json  CLFD.json  COIN.json  COPX.json  CORZ.json  CRCL.json  CRDO.json  CRM.json  CRML.json  CRWD.json  CRWV.json  CVLT.json  DDD.json  DDOG.json  DELL.json  EOSE.json  FCEL.json  FCX.json  FIG.json  FIGR.json  FLNC.json  FNV.json  (+69 more)
docs/deep-dives/: 000660.md  AAOI.md  ADBE.md  ADPT.md  AEHR.md  AEM.md  AG.md  AI_buildout.md  AMD.md  ASPI.md  ASTS.md  AVGO.md  BB.md  BE.md  BFLY.md  BLZE.md  BMNR.md  CBRS.md  CCXI.md  CEG.md  CLFD.md  COIN.md  COPX.md  CORZ.md  CRCL.md  CRDO.md  CRM.md  CRML.md  CRWD.md  CRWV.md  CVLT.md  DDD.md  DDOG.md  DELL.md  EOSE.md  FCEL.md  FCX.md  FIG.md  FIGR.md  FLNC.md  (+83 more)
docs/stylesheets/: extra.css
helpers/: build_derived.py  generate_widget.py  price_rsi.py  validate_deep_dive.py
scripts/: validate_dd.py
tests/: test_consistency.py  test_deep_dives.py  test_mcp_server.py
