[project]
name = "deep-dives-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "tomstocks-ai",email = "tomkbz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zensical (>=0.0.33,<0.0.34)"
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]

[project.scripts]
deep-dives-mcp = "deep_dives_mcp.server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
mcp = ["fastmcp"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
jsonschema = "*"

[tool.poetry.group.mcp.dependencies]
fastmcp = ">=2.0"

[tool.pytest.ini_options]
pythonpath = [".", "helpers"]
testpaths = ["tests"]

